# tpm-admin-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: FEATURE_LIST.md  PRD_v1.md  PRODUCT_NARRATIVE.md
src/: __init__.py  config.py  main.py
src/adapters/: __init__.py  base.py  calendar_adapter.py  drive_adapter.py  roster_adapter.py  sheets_adapter.py  slack_adapter.py  smartsheet_adapter.py
src/api/: __init__.py  communication.py  extraction.py  health.py  identity.py  integration.py  meetings.py  output.py  prep.py  router.py  search.py
src/communication/: __init__.py  data_aggregator.py  prompts.py  schemas.py  service.py
src/db/: __init__.py  turso.py
src/events/: __init__.py  base.py  bus.py  store.py  types.py
src/extraction/: __init__.py  date_normalizer.py  prompts.py  schemas.py
src/identity/: __init__.py  confidence.py  fuzzy_matcher.py  llm_matcher.py  resolver.py  schemas.py
src/integration/: __init__.py  integration_router.py  schemas.py  (+1 more)
templates/: default_minutes.html.j2  default_minutes.md.j2
tests/: __init__.py  conftest.py  test_api.py  test_events.py  test_models.py  test_open_items.py  test_output_api.py  test_output_renderer.py  test_output_router.py  test_projection_integration.py  test_projections.py  test_transcript_parser.py
(+178 files in other folders)
