[project]
name = "tpm-admin-agent"
version = "0.1.0"
description = "Meeting intelligence automation for TPMs - extracts action items, decisions, risks from meeting transcripts"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.76.0",
    "dateparser>=1.2.2",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "libsql-client>=0.3.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "structlog>=25.5.0",
    "uvicorn>=0.40.0",
    "webvtt-py>=0.5.1",
    "rapidfuzz>=3.14.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# LLM prompts are multi-line strings where line length is irrelevant
"src/extraction/prompts.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_ignores = true
